<?xml version="1.0"?>
<package format="2">
  <name>vdbfusion_ros</name>
  <version>0.0.0</version>
  <description>The vdbfusion_ros package</description>

  <maintainer email="saurabh.gupta1002@gmail.com">Saurabh Gupta</maintainer>

  <license>MIT</license>

  <author email="saurabh.gupta1002@gmail.com">Saurabh Gupta</author>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>

</package>
